# Scopic

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: ArcSegment.h  Contour.h  LineSegment.h  Point.h  SFML.h  Segment.h  Utils.h
src/: ArcSegment.cpp  Contour.cpp  LineSegment.cpp  Point.cpp  SFML.cpp  Utils.cpp  main.cpp
tests/: CMakeLists.txt  main.cpp
